# zephyr

boards/posix/nrf52_bsim/: Kconfig.board
doc/reference/devicetree/: api.rst
dts/arm/nordic/: nrf52833.dtsi
dts/bindings/bluetooth/: nordic,nrf-dfe-ant.yaml
dts/bindings/flash_controller/: nordic,nrf-qspi.yaml
dts/bindings/net/wireless/: nordic,nrf-radio.yaml
dts/bindings/spi/: spi-controller.yaml
include/: devicetree.h
include/bluetooth/: direction.h  hci.h
samples/bluetooth/direction_finding_per_adv_beacon/: CMakeLists.txt  README.rst  df_aoa.conf  df_aod.conf  prj.conf  sample.yaml
samples/bluetooth/direction_finding_per_adv_beacon/boards/: nrf52833dk_nrf52833.overlay
samples/bluetooth/direction_finding_per_adv_beacon/src/: main.c
samples/cpp/hello_world/: Kconfig
samples/cpp/hello_world_class/: Kconfig  README.rst  prj.conf  sample.yaml
samples/cpp/hello_world_class/src/: main.cpp  unwind-cxx.h
scripts/dts/: gen_defines.py
soc/arm/nordic_nrf/: soc_nrf_common.h
subsys/bluetooth/controller/: Kconfig.df  Kconfig.ll_sw_split
subsys/bluetooth/controller/hal/: radio_df.h
subsys/bluetooth/controller/hci/: hci.c
subsys/bluetooth/controller/include/: ll.h  ll_feat.h
subsys/bluetooth/controller/ll_sw/: lll_df.h  nrf.cmake  pdu.h  ull.c  ull_adv.c  ull_adv_internal.h  ull_adv_sync.c  ull_adv_types.h  ull_df.c  ull_df.c.orig  ull_df.h  ull_master.c  ull_slave.c
subsys/bluetooth/host/: direction.c  direction.h  hci_core.c  hci_core.h
tests/bluetooth/df/: CMakeLists.txt
tests/bluetooth/df/connectionless_cte_chains/: CMakeLists.txt
(+17 files in other folders)
